== Affiliates - Changelog ==

= 2.15.9 =
* Added filters: 'affiliates_thanks_sign_up_text' and 'affiliates_check_confirmation_text' on registration form.

= 2.15.8 =
* Updated pot and translation files.
* Updated the German translation.
* Updated the Spanish translation.

= 2.15.7 =
* Added the [affiliates_user_meta] shortcode which allows to render user meta data.
* Updated the Spanish translation.

= 2.15.6 =
* Added the [affiliates_bloginfo] shortcode.
* Extended the functionality provided by the [affiliates_url] shortcode adding the 'url' attribute.

= 2.15.5 =
* Added affiliates delete bulk option.
* For WordPress translation : Added Text Domain and Domain Path header tags.

= 2.15.4 =
* For WordPress translation : Substituted constants with string literals as language domain indicators.
* Moved the complete changelog to changelog.txt.

= 2.15.3 =
* Updated the admin buttons translation.
* Updated the German translation.
* Updated the Spanish translation.
* Updated the translation template file.

= 2.15.2 =
* Fixed an unescaped underscore in the SQL query for the test to find pages containing Affiliates shortcodes.

= 2.15.1 =
* WordPress 4.5 compatibility tested.
* Fixed an issue with affiliate fields not showing updated value on first load.

= 2.15.0 =
* Added the $affiliates_request_encoded_id global which provides the referring affiliate's ID if
  recognized during a request.
* Added the [referrer] shortcode which allows to render information about the referring affiliate.
* Added the [affiliates_is_referred] shortcode which allows to display content conditionally for referred visitors.
* Added the [affiliates_is_not_referred] shortcode which allows to display content conditionally for referred visitors.

= 2.14.1 =
* Added a parameter set to the filter invoked when the new affiliate notification is sent to the
  site administrator.
* Added the affiliates_new_affiliate_registration_headers filter.

= 2.14.0 =