@@ -2,6 +2,7 @@
 
 = 2.15.9 =
 * Added filters: 'affiliates_thanks_sign_up_text' and 'affiliates_check_confirmation_text' on registration form.
+* Added button class to buttons on registration form settings.
 
 = 2.15.8 =
 * Updated pot and translation files.
